/*
Dear Programmers,

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*                                                 *
*	This file belongs to Kevin Veros Hamonangan   *
*	and	Fandi Fladimir Dachi and is a part of     *
*	our	last project as the student of Del        *
*	Institute of Technology, Sitoluama.           *
*	Please contact us via Instagram:              *
*	sleepingnext and fandi_dachi                  *
*	before copying this file.                     *
*	Thank you, buddy. ðŸ˜Š                          *
*                                                 *
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/

syntax = "proto3";

package com.ta04.srv.payment;

message Payment {
    int32 id = 1;
    int32 order_id = 2;
    int32 payment_method_id = 3;
    string status = 4;
}

message Order {
    int32 id = 1;
    int32 product_id = 2;
    int32 user_id = 3;
    string status = 4;
}

message GetAllPaymentsRequest {
    string status = 1;
}

message GetOnePaymentRequest {
    int32 id = 1;
    int32 order_id = 2;
}

message Response {
    Payment payment = 1;
    Error error = 2;
    repeated Payment payments = 3;
}

message Error {
    int32 code = 1;
    string message = 2;
}

service PaymentService {
    rpc GetAllPayments (GetAllPaymentsRequest) returns (Response) {
    }

    rpc GetOnePayment (GetOnePaymentRequest) returns (Response) {
    }

    rpc CreateOnePayment (Payment) returns (Response) {
    }

    rpc UpdateOnePayment (Payment) returns (Response) {
    }
}